# xiaozhi-esp32

./: .gitignore  sdkconfig.defaults
components/ESP32-Xiaozhi/: .gitignore  CMakeLists.txt
components/ESP32-Xiaozhi/src/: application.cc  application.h  display.cc  display.h  system_reset.cc  version.h  wifi_board.cc
components/ESP32-Xiaozhi/src/protocols/: websocket_protocol.cc
components/esp-xiaozhi/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
components/esp-xiaozhi/src/: ota.h
components/esp-xiaozhi/src/assets/: lang_config.h
main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.h  board.cc  board.h  display.cc  idf_component.yml  main.cc  speaker.cc  version.cc  wifi_board.cc  wifi_board.h
main/iot/things/: battery.cc  screen.cc
main/taiji-pi-s3/: config.h
